# Auto_Temperature_Control

./: README.md
AutoTempControl/: CMakeLists.txt
AutoTempControl/AutoTempControl/: ApplianceController.cpp  ApplianceController.h  Application.cpp  Application.h  AutoTempControl.cpp  AutoTempControlMain.cpp  AutoTempControlMain.h  CMakeLists.txt  Runner.cpp  Runner.h  TempSensor.cpp  TempSensor.h  UserSetting.cpp  UserSetting.h
